tentativa de melhorar responsividade

--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -109,11 +109,11 @@
                 <p class="w-75 p-1 text-wrap">Aqui você pode ficar por dentro de tudo que acontece em toda a comunidade ruarl do vale do assú e todo RN. O RNBR se esforça para que o homem do campo fique a par de tudo que aconte, então confira alguns eventos abaixo.</p>
             </div>
             <h3 class="col-sm-12 no-gutters m-0 p-1 w-auto">Eventos Na Comunidade</h3>
-            <div class="col-sm-12 no-gutters w-auto m-0 p-3">
-                <ul id="listEventos">
+            <div class="col-sm-12gutters w-aut, -3">
+                <listEventos">
                     <li class="itenEvento">
                         <div>
-                            <h4>Nenhum evento para mostrar no momento.</h4>
+                            <h4>Nenhum evento publicado</h4>
                         </div>
                     </li>
                 </ul>
@@ -122,49 +122,50 @@
                 </div>
             </div>
         </section>
-        <section id="sobre" class="row no-gutters">
-            <header class="sobre-header">
-                <h1>Sobre nós...</h1>
-            </header> 
-            <main class="sobre-main">
-                <p>O RNBR é um projeto de extesão do IFRN - campus Ipanguaçu que tem como principal objetivo a produção e divulgação de informações associadas ao setor agropecuário, divulgando informações que envolvam o mercado, políticas agrícolas, pesquisas, inovações e eventos.</p>
-                <p>O desenvolvimento do projeto envolveu a participação de alunos de diferentes cursos do campus, e todos sob a orientação dos professores José Geraldo Bezerra Galvão Junior e Daniel Aguiar da Silva Oliveira Carvalho. Ao lado você pode verificar a equipe completa do projeto.</p>
-            </main>
-            <aside class="sobre-equipe">
-                <h3 class="sobre-equipe-header">Equipe</h3>
-                <figure class="geraldo">
-                    <img class="img-fluid" src="/imagens/geraldo.jpg">
-                    <figcaption><h4>José Geraldo</h4><h5>coordenador do projeto</h5></figcaption>
-                </figure>
-                <figure class="daniel">
-                    <img class="img-fluid" src="/imagens/daniel.jpg">
-                    <figcaption><h4>Daniel Águiar</h4><h5>Coordenador do projeto</h5></figcaption>
-                </figure>
-                <figure class="melissa">
-                    <img class="img-fluid" src="/imagens/sabrina.jpg">
-                    <figcaption><h4>Melissa Sabrina </h4><h5>Aluna de Agroecologia</h5></figcaption>
-                </figure>
-                <figure class="marcio">
-                    <img class="img-fluid" src="https://blog.rodeowest.com.br/wp-content/uploads/2018/10/comecando-uma-plantacao-de-arroz-1024x436.jpg">
-                    <figcaption><h4>Marcio Rufino</h4><h5>Aluno de Informática</h5></figcaption>
-                </figure>
-                <figure class="ana">
-                    <img class="img-fluid" src="/imagens/ana.jpg">
-                    <figcaption><h4>Ana Paula</h4><h5>Aluna de Agroecologia</h5></figcaption>
-                </figure>
-                <figure class="nay">
-                    <img class="img-fluid" src="/imagens/nay.jpg">
-                    <figcaption><h4>Nayara Brito</h4><h5>Aluna de Informaática</h5></figcaption>
-                </figure>
-                <figure class="renan">
-                    <img class="img-fluid" src="/imagens/renan.jpg">
-                    <figcaption><h4>Anderson Renan</h4><h5>Aluno de Tecn. Agroecologia</h5></figcaption>
-                </figure>
-                <figure class="paulo">
-                    <img class="img-fluid" src="/imagens/paulo.jpg">
-                    <figcaption><h4>Paulo Henrique</h4><h5>Aluno de Informática</h5></figcaption>
-                </figure>
-            </aside> 
+        <section class="row no-gutters">
+            <h1 class="col-sm-12 no-gutters m-0 p-3 w-100 text-white bg-success">Sobre nós...</h1>
+
+            <div class="col-sm-6 no-gutters p-5">
+                <p class="w-75 p-1 text-wrap">O RNBR é um projeto de extesão do IFRN - campus Ipanguaçu que tem como principal objetivo a produção e divulgação de informações associadas ao setor agropecuário, divulgando informações que envolvam o mercado, políticas agrícolas, pesquisas, inovações e eventos.</p>
+                <p class="w-75 p-1 text-wrap">O desenvolvimento do projeto envolveu a participação de alunos de diferentes cursos do campus, e todos sob a orientação dos professores José Geraldo Bezerra Galvão Junior e Daniel Aguiar da Silva Oliveira Carvalho. Ao lado você pode verificar a equipe completa do projeto.</p>
+            </div>
+            <div class="col-sm-6 no-gutters p-0">
+                <div class="row no-gutters">
+                    <h3 class="col-sm-12 no-gutters m-0 p-1 w-100 text-white text-center bg-success">Equipe</h3>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/geraldo.jpg">
+                        <figcaption class="figure-caption float-sm-left">José Geraldo, coordenador do projeto</figcaption>
+                    </figure>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/marcio.jpg">
+                        <figcaption class="figure-caption">Marcio Rufino, Aluno de Informática</figcaption>
+                    </figure>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/melissa.jpg">
+                        <figcaption class="figure-caption">Melissa Sabrina, Aluna de Agroecologia</figcaption>
+                    </figure>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/Rislayne.jpg">
+                        <figcaption class="figure-caption">Rislayne, ...</figcaption>
+                    </figure>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/ana.jpg">
+                        <figcaption class="figure-caption">Ana Paula, Aluna de Agroecologia</figcaption>
+                    </figure>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/alice.jpg">
+                        <figcaption class="figure-caption">Alice, ...</figcaption>
+                    </figure>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/renan.jpg">
+                        <figcaption class="figure-caption">Anderson Renan, Aluno de Tecn. Agroecologia</figcaption>
+                    </figure>
+                    <figure class="col-sm-2 no-gutters figure m-1">
+                        <img class="img-fluid figure-img rounded" src="/imagens/paulo.jpg">
+                        <figcaption class="figure-caption">Paulo Henrique, Aluno de Informática</figcaption>
+                    </figure>
+                </div>
+            </div> 
         </section>
         <footer class="row no-gutters mt-5 p-4 border-top bg-light">
                 <small class="col-sm-12 d-flex justify-content-center m-2 p-3">&copy; Copyright 2019, Rural News Brasil</small>
