--- a/backend/view/artigos.html
+++ b/backend/view/artigos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>RUARAL NEWS BR</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="ruaral news brasil - levando informação ao campo" content="notícias, agropecuária, campo, zona rural, agronegócio, vida no campo">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/estilo-pagina-artigos-secao-artigos.css"/>
