--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -138,7 +138,7 @@
                         <figcaption class="figure-caption float-sm-left">José Geraldo, coordenador do projeto</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/marcio.JPG">
+                        <img class="img-fluid figure-img rounded" src="/imagens/marcio.jpg">
                         <figcaption class="figure-caption">Marcio Rufino, Aluno de Informática</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
@@ -146,23 +146,23 @@
                         <figcaption class="figure-caption">Melissa Sabrina, Aluna de Agroecologia</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/Rislayne.JPG">
+                        <img class="img-fluid figure-img rounded" src="/imagens/Rislayne.jpg">
                         <figcaption class="figure-caption">Rislayne, ...</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/ana.JPG">
+                        <img class="img-fluid figure-img rounded" src="/imagens/ana.jpg">
                         <figcaption class="figure-caption">Ana Paula, Aluna de Agroecologia</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/alice.JPG">
+                        <img class="img-fluid figure-img rounded" src="/imagens/alice.jpg">
                         <figcaption class="figure-caption">Alice, ...</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/renan.JPG">
+                        <img class="img-fluid figure-img rounded" src="/imagens/renan.jpg">
                         <figcaption class="figure-caption">Anderson Renan, Aluno de Tecn. Agroecologia</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/paulo.JPG">
+                        <img class="img-fluid figure-img rounded" src="/imagens/paulo.jpg">
                         <figcaption class="figure-caption">Paulo Henrique, Aluno de Informática</figcaption>
                     </figure>
                 </div>
