--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -138,7 +138,7 @@
                         <figcaption class="figure-caption float-sm-left">José Geraldo, coordenador do projeto</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/marcio.jpg">
+                        <img class="img-fluid figure-img rounded" src="/imagens/marcio.JPG">
                         <figcaption class="figure-caption">Marcio Rufino, Aluno de Informática</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
@@ -146,7 +146,7 @@
                         <figcaption class="figure-caption">Melissa Sabrina, Aluna de Agroecologia</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/Rislayne.jpg">
+                        <img class="img-fluid figure-img rounded" src="/imagens/Rislayne.JPG">
                         <figcaption class="figure-caption">Rislayne, ...</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
@@ -154,7 +154,7 @@
                         <figcaption class="figure-caption">Ana Paula, Aluna de Agroecologia</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
-                        <img class="img-fluid figure-img rounded" src="/imagens/alice.jpg">
+                        <img class="img-fluid figure-img rounded" src="/imagens/alice.JPG">
                         <figcaption class="figure-caption">Alice, ...</figcaption>
                     </figure>
                     <figure class="col-sm-2 no-gutters figure m-1">
